--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>
         Hello Word!
     </h1>
+    <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto eligendi porro similique, aliquam minus harum animi quas perspiciatis laborum quibusdam vitae? Saepe eum, maxime iusto debitis tempore aliquam blanditiis molestiae?</h2>
 </body>
 </html>
